--- a/frontend/css-style/shared/header.css
+++ b/frontend/css-style/shared/header.css
@@ -4,7 +4,6 @@
   align-items: center;
   position: sticky;
   top: 0;
-  background-color: white;
   background: #fff;
   padding: 1.35rem;
   z-index: 1;
