--- a/frontend/css-style/shared/sidebar.css
+++ b/frontend/css-style/shared/sidebar.css
@@ -1,17 +1,21 @@
-.sidebar {
-  position: sticky;
+#sidebar.sidebar {
+  display: none;
   max-width: 220px;
-  background-color: white;
   background: #fff;
-  top: 3rem;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.05);
 }
 
+#sidebar.show {
+  display: block;
+  position: fixed;
+  height: 100%;
+}
 
 
 
 .side-bar-link {
   display: flex;
-  justify-content: space-between, center;
+  justify-content: space-between;
   align-items: center;
   margin-bottom: 1.25rem;
   padding-left: 3rem;
@@ -89,6 +93,12 @@
 @media (max-width: 940px) {
   .sidebar {
     display: none;
+  }
+}
+
+@media (min-width: 941px) {
+  #sidebar.sidebar {
+    display: block;
   }
 }
 
